backend/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: django

spec:
  replicas: 1

  selector:
    matchLabels:
      app: django

  template:
    metadata:
      labels:
        app: django

    spec:
      containers:
        - name: django
          image: scholarmate-backend:latest

          ports:
            - containerPort: 8000
