backend/k8s/base/redis-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: redis

spec:
  type: ClusterIP

  selector:
    app: redis

  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
