backend/k8s/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: django

spec:
  type: ClusterIP

  selector:
    app: django

  ports:
    - name: http
      port: 8000
      targetPort: 8000 
      protocol: TCP
