backend/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: django-ingress

spec:
  ingressClassName: traefik

  rules:
    - host: api.scholarmate-v2.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django
                port:
                  number: 8000
